# Quip

./: .editorconfig  .gitignore  .swiftformat  CLAUDE.md  README.md  TODO.md
.github/workflows/: ci.yml
.ralph/: prd.json
QuipAndroid/: settings.gradle.kts
QuipAndroid/app/: build.gradle.kts
QuipAndroid/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
QuipLinux/: .gitignore  Cargo.toml  build-appimage.sh  rustfmt.toml
QuipLinux/Resources/: kokoro_tts.py
QuipLinux/src/: main.rs  state.rs
QuipLinux/src/models/: layout.rs  managed_window.rs  mod.rs  settings.rs
QuipLinux/src/platform/: display.rs  mod.rs  traits.rs
QuipLinux/src/platform/wayland/: input.rs  mod.rs  windows.rs
QuipLinux/src/platform/x11/: input.rs  mod.rs  windows.rs
QuipLinux/src/protocol/: limits.rs  messages.rs  mod.rs  types.rs
QuipLinux/src/services/: apns_client.rs  apns_key_store.rs  audit_logger.rs  auth_throttle.rs  claude_mode.rs  cloudflare_tunnel.rs  connection_log.rs  device_id.rs  image_upload.rs  kokoro_tts.rs  log_paths.rs  mdns_advertiser.rs  message_router.rs  mod.rs  permission_probe.rs  pin_manager.rs  preferences_store.rs  push_service.rs  secret_redactor.rs  settings_pane_opener.rs  single_instance.rs  state_detector.rs  tailscale.rs  terminal_color.rs  terminal_url_extractor.rs  whisper_service.rs  ws_server.rs
QuipLinux/src/ui/: layout_preview.rs  main_window.rs  mod.rs  settings_dialog.rs  status_bar.rs  window_list.rs
QuipMac/: Info.plist  QuipMacApp.swift  project.yml
QuipMac/Models/: LayoutPreset.swift  WindowInfo.swift
QuipMac/QuipMac.xcodeproj/: project.pbxproj
QuipMac/Resources/: kokoro_tts.py
QuipMac/Services/: APNsClient.swift  APNsKeyStore.swift  AuditLogger.swift  AuthThrottle.swift  BonjourAdvertiser.swift  ClaudeModeDetector.swift  CloudflareTunnel.swift  ConnectionLog.swift  DiagnosticsBundle.swift  ImageUploadHandler.swift  KeystrokeInjector.swift  KokoroTTS.swift  LogPaths.swift  NetworkMode.swift  PINManager.swift  PermissionProbeService.swift  PromptLibrary.swift  PushNotificationService.swift  SecretRedactor.swift  TailscaleService.swift  TerminalColorManager.swift  TerminalStateDetector.swift  TerminalURLExtractor.swift  WebSocketServer.swift  WhisperDictationService.swift  WhisperOutputCleaner.swift  WhisperStatusStore.swift  WindowManager.swift
QuipMac/Tests/: APNsJWTTests.swift  AuthThrottleTests.swift  ClaudeModeScannerTests.swift  DiagnosticsBundleTests.swift  ITermWindowListParserTests.swift  ImageUploadHandlerTests.swift  KeystrokeInjectorWriteExpressionTests.swift  PushRegisteredDeviceStoreTests.swift  TerminalURLExtractorTests.swift  WhisperDictationServiceTests.swift  WhisperOutputCleanerTests.swift
QuipMac/Tools/: import-streamdeck-prompts.sh
QuipMac/Views/: Color+Hex.swift  LayoutPresetTabs.swift  LayoutPreview.swift  MainWindow.swift  MenuBarView.swift  MonitorSelector.swift  SettingsView.swift  WindowListSidebar.swift
QuipiOS/: Info.plist  QuipApp.swift  Signing.xcconfig  project.yml
QuipiOS/Models/: BackendSession.swift  PairedBackend.swift  WindowInfo.swift
QuipiOS/QuipLiveActivity/: Info.plist  QuipLiveActivityBundle.swift  QuipLiveActivityWidget.swift  QuipMacPermsActivityWidget.swift
QuipiOS/QuipWatch/: Info.plist  QuipWatchApp.swift
QuipiOS/QuipiOS.xcodeproj/: project.pbxproj
QuipiOS/Resources/: CertPins.json  dictation-vocab.txt
QuipiOS/Services/: BackendConnectionManager.swift  BonjourBrowser.swift  HardwareButtonHandler.swift  ImageRecompressor.swift  KeychainBackendPINs.swift  KeychainDeviceID.swift  LiveActivityService.swift  PendingImageState.swift  PreferencesSyncService.swift  (+10 more)
Shared/: AudioRingBuffer.swift  Constants.swift  MessageProtocol.swift  PCMChunker.swift  PTTWindowTracker.swift  PairingPayload.swift  SeamStitcher.swift
VoiceCodeMac/: Info.plist  VoiceCodeMac.entitlements  VoiceCodeMacApp.swift  project.yml
VoiceCodeiOS/: Info.plist  VoiceCodeApp.swift  project.yml
docs/: cloudflared-update.md  protocol.md
(+116 files in other folders)
