[package]
name = "quip-linux"
version = "1.0.0"
edition = "2021"
description = "Voice remote for Claude Code — Linux edition"

[dependencies]
# GUI
gtk4 = "0.9"
libadwaita = "0.7"
glib = "0.20"
gdk4 = "0.9"
cairo-rs = { version = "0.20", features = ["v1_16"] }
pango = "0.20"
pangocairo = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# WebSocket
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# mDNS
mdns-sd = "0.11"

# Process inspection
procfs = "0.17"

# QR code generation
qrcode = "0.14"
image = "0.25"

# Settings
directories = "5"
toml = "0.8"

# Misc
hostname = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
opt-level = 2
lto = "thin"
