[package]
name = "quip-linux"
version = "1.3.3"
edition = "2021"
description = "Voice remote for Claude Code — Linux edition"

[dependencies]
# GUI
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_4"] }
glib = "0.20"
gdk4 = "0.9"
gdk-pixbuf = "0.20"
cairo-rs = { version = "0.20", features = ["v1_16"] }
pango = "0.20"
pangocairo = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# WebSocket
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# mDNS
mdns-sd = "0.11"
if-addrs = "0.13"

# Process inspection
procfs = "0.17"

# QR code generation
qrcode = "0.14"
image = "0.25"

# Settings
directories = "5"
toml = "0.8"

# PIN generation
rand = "0.9"

# Encoding
base64 = "0.22"

# Misc
async-channel = "2"
hostname = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
nix = { version = "0.29", features = ["signal", "process"] }

# Whisper PTT — local CPU/GPU transcription via whisper.cpp.
# Builds whisper.cpp + ggml from source on first compile (cmake + clang
# required). Gated behind the `whisper` feature so packagers without a C++
# toolchain can still build.
whisper-rs = { version = "0.13", optional = true }

# HTTP client for: whisper model download on first PTT, APNs HTTP/2 push.
# rustls-tls so we don't pull OpenSSL into the build.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream", "http2", "json"] }

# JWT signing for APNs (ES256 over the Apple-issued .p8 key).
jsonwebtoken = "9"

# AES-GCM-at-rest for the APNs .p8. Key is derived from /etc/machine-id via
# SHA-256, so a backup of just `~/.config/quip/apns.p8` (without the rest of
# the filesystem) is opaque. Pure Rust — no OpenSSL pull-in.
aes-gcm = "0.10"
sha2 = "0.10"

[features]
default = ["whisper"]
# Build whisper.cpp from source for local PTT transcription.
# Requires cmake + a working C++ toolchain (gcc or clang).
whisper = ["dep:whisper-rs"]

[profile.release]
opt-level = 2
lto = "thin"
